# FriendHub-tools

./: .gitignore  LICENSE.md  README.md  export_bin.bat  export_bins.sh
activity_tracker/: Cargo.toml
activity_tracker/src/: compute.rs  main.rs
database/: .gitignore  Cargo.toml  README.md
database/src/: connector.rs  lib.rs  mod.rs  tables.rs
database/src/tables/: comment.rs  message.rs  mod.rs  post.rs  user.rs  vote.rs
database_mock/: Cargo.toml
database_mock/src/: main.rs
database_mock/src/database/: connector.rs  tables.rs
email/: Cargo.toml
email/src/: exit_codes.rs  main.rs  mod.rs  renderer.rs
email/src/emails/: mod.rs  renderer.rs  sender.rs  types.rs
email/templates/: birthday.jinja2  new_login.jinja2  password_reset.jinja2  welcome.jinja2
upload/: .gitignore  Cargo.toml
