[package]
name = "activity_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
fake = "2.6.1"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
tokio = "1.29.1"

[lib]
name = "activity_tracker"
crate-type = ["cdylib"]
