[package]
name = "activity_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
fake = "2.9.2"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
tokio = "1.37.0"
