[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
fake = { version = "2.6.1", features = [ "derive", "uuid", "chrono", "geo" ] }
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "time", "chrono", "uuid", "macros", "chrono" ] }
tokio = { version = "1.28.1", features = [ "full" ] }
