[package]
name = "database_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "time", "chrono", "uuid" ] }
tokio = { version = "1.28.1", features = [ "full" ] }
